Move active styles out of CSS; also fix spacing

--- a/css/theme.css
+++ b/css/theme.css
@@ -21,12 +21,6 @@
   visibility: visible;
 }
 
-.location-bar.active {
-  top: 40px;
-  background-color: rgba(255, 255, 255, 0.2);
-  color: rgba(255, 255, 255, 1);
-}
-
 .dashboard-active .navbar {
 }
 
